COmponente Lista de evento por dia selecionado

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="mainBlue">#2563eb</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray_list">#A9A7A5A4</color>
+    <color name="blank_background">#FCFDFF</color>
 </resources>
