--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -45,15 +45,24 @@
 
         <LinearLayout
             android:layout_width="400dp"
-            android:layout_height="250dp"
-            android:padding="10dp">
+            android:layout_height="320dp"
+            android:padding="10dp"
+            android:orientation="vertical"
+            >
 
             <TextView
                 android:id="@+id/tvDiaSelect"
+                android:layout_marginStart="20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/dia_nn"
                 android:textSize="16sp"
+                />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="25dp"
                 />
 
 
