--- a/app/src/main/res/layout/fragment_event_item.xml
+++ b/app/src/main/res/layout/fragment_event_item.xml
@@ -4,7 +4,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.calendar.EventDetailFragment">
+    tools:context=".ui.calendar.ItemEventFragment">
 
 
     <androidx.cardview.widget.CardView
