--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -8,75 +8,55 @@
     android:backgroundTint="@color/blank_background"
     >
 
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
 
-        <com.applandeo.materialcalendarview.CalendarView
-            android:id="@+id/calendarView"
-            android:layout_width="match_parent"
-            android:layout_height="375dp"
-            app:eventsEnabled="true"
-            app:headerColor="@color/mainBlue"
-            app:headerLabelColor="@color/white"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:todayLabelColor="@color/mainBlue"
-            app:type="one_day_picker" />
+    <com.applandeo.materialcalendarview.CalendarView
+        android:id="@+id/calendarView"
+        android:layout_width="0dp"
+        android:layout_height="375dp"
+        app:eventsEnabled="true"
+        app:headerColor="@color/mainBlue"
+        app:headerLabelColor="@color/white"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:todayLabelColor="@color/mainBlue"
+        app:type="one_day_picker" />
 
-
-    </LinearLayout>
 
     <androidx.cardview.widget.CardView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:backgroundTint="@color/blank_background"
         app:cardCornerRadius="30dp"
-        >
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/calendarView">
 
         <LinearLayout
-            android:layout_width="400dp"
-            android:layout_height="320dp"
-            android:padding="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:orientation="vertical"
-            >
+            android:padding="10dp">
 
             <TextView
                 android:id="@+id/tvDiaSelect"
-                android:layout_marginStart="20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
                 android:text="@string/dia_nn"
-                android:textSize="16sp"
-                />
+                android:textSize="16sp" />
 
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvListEventItems"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:layout_marginTop="25dp"
-                />
+                android:layout_weight="1" />
 
 
         </LinearLayout>
 
-
-
-
     </androidx.cardview.widget.CardView>
-
-
-
-
-    -->
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
