Guardando en strings.xml

--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -10,7 +10,7 @@
         android:id="@+id/tituloPerfil"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Perfil"
+        android:text="@string/perfil"
         android:textSize="24sp"
         android:textStyle="bold"
         android:textColor="@color/mainBlue"
@@ -29,7 +29,7 @@
         app:layout_constraintTop_toBottomOf="@id/tituloPerfil"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:contentDescription="Foto de perfil"
+        android:contentDescription="@string/foto_de_perfil"
         android:padding="8dp" />
 
     <!-- Nombre de usuario -->
@@ -51,7 +51,7 @@
         android:id="@+id/correoTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Correo:"
+        android:text="@string/correo"
         android:textSize="16sp"
         android:textColor="#555555"
         android:layout_marginTop="24dp"
@@ -66,7 +66,7 @@
         android:id="@+id/descripcionTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Descripción:"
+        android:text="@string/descripcion_perfil"
         android:textSize="16sp"
         android:textColor="#555555"
         android:layout_marginTop="16dp"
@@ -82,7 +82,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="128dp"
         android:backgroundTint="@color/mainBlue"
-        android:text="Cerrar sesión"
+        android:text="@string/cerrar_sesi_n"
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
