Navegar hasta crear nuevo evento

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -15,11 +15,23 @@
         android:id="@+id/navigation_event_manager"
         android:name="com.example.planpalmobile.ui.eventmanager.EventManagerFragment"
         android:label="@string/title_todoLeft"
-        tools:layout="@layout/fragment_event_manager" />
+        tools:layout="@layout/fragment_event_manager">
+        <action
+            android:id="@+id/action_navigation_event_manager_to_createEventDetailFragment"
+            app:destination="@id/createEventDetailFragment" />
+    </fragment>
+
 
     <fragment
         android:id="@+id/navigation_perfil"
         android:name="com.example.planpalmobile.ui.perfil.PerfilFragment"
         android:label="@string/title_todoRight"
         tools:layout="@layout/fragment_perfil" />
+    <fragment
+        android:id="@+id/createEventDetailFragment"
+        android:name="com.example.planpalmobile.ui.eventmanager.CreateEventDetailFragment"
+        android:label="fragment_create_event_detail"
+        tools:layout="@layout/fragment_create_event_detail" />
+
+
 </navigation>
