--- a/app/src/main/res/layout/fragment_create_event_detail.xml
+++ b/app/src/main/res/layout/fragment_create_event_detail.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/et_login_email"
+            android:id="@+id/etTitulo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
@@ -60,7 +60,7 @@
             android:textSize="16sp"
             android:textStyle="bold" />
 
-        <EditText
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/btnPickDay"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
@@ -70,7 +70,7 @@
             app:backgroundTint="@color/blank_background"
             app:cornerRadius="8dp" />
 
-        <EditText
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/btnPickTime"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
@@ -106,7 +106,7 @@
             android:textSize="16sp"
             android:textStyle="bold" />
 
-        <EditText
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/btnPickDayEn"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
@@ -116,7 +116,7 @@
             app:backgroundTint="@color/blank_background"
             app:cornerRadius="8dp" />
 
-        <EditText
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/btnPickTimeEnd"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
@@ -129,7 +129,7 @@
     </LinearLayout>
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/materialButton"
+        android:id="@+id/btnDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
@@ -150,7 +150,7 @@
         app:layout_constraintBottom_toTopOf="@+id/lloptionsButtons"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/materialButton">
+        app:layout_constraintTop_toBottomOf="@+id/btnDescription">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -172,7 +172,8 @@
                 app:iconPadding="8dp" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rvListEventItems"
+                android:id="@+id/rvDateEvent"
+                android:layout_gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_marginTop="25dp"
