Correciones del biding

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -55,7 +55,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tvCreaTuCuenta">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/et_login_email"
+            android:id="@+id/etTitulo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress" />
