update: Mejoras visuales en la GUI
- calendario mas pequeño
- separacion de los items en el recyclerview
- bordes redondeados
- centrado de los items

--- a/app/src/main/res/layout/fragment_event_item.xml
+++ b/app/src/main/res/layout/fragment_event_item.xml
@@ -4,13 +4,17 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.calendar.ItemEventFragment">
+    tools:context=".ui.calendar.ItemEventFragment"
+    android:layout_gravity="center_horizontal"
+    >
 
 
     <androidx.cardview.widget.CardView
-        android:layout_width="325dp"
-        android:layout_height="79dp"
+        android:layout_width="300dp"
+        android:layout_height="70dp"
         app:cardCornerRadius="20dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
 
         >
 
@@ -26,7 +30,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/name_event"
                 android:textColor="@color/black"
-                android:textSize="17sp"
+                android:textSize="14sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
