--- a/app/src/main/res/layout/fragment_create_event_detail.xml
+++ b/app/src/main/res/layout/fragment_create_event_detail.xml
@@ -197,15 +197,14 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnCancelar"
-            android:layout_height="37dp"
             android:layout_width="0dp"
+            android:layout_height="37dp"
+            android:layout_marginEnd="35dp"
             android:layout_weight="1"
             android:text="@string/cancelar"
-            android:layout_marginEnd="35dp"
             android:textColor="@color/black"
             app:backgroundTint="@color/blank_background"
-            app:cornerRadius="8dp"
-            />
+            app:cornerRadius="8dp" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnCrear"
