--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageButton
-            android:id="@+id/iconButton"
+            android:id="@+id/ibtnActualDay"
             android:layout_width="50dp"
             android:layout_height="40dp"
             android:background="@color/white"
