--- a/app/src/main/res/layout/item_evento.xml
+++ b/app/src/main/res/layout/item_evento.xml
@@ -42,8 +42,9 @@
             <Button
                 android:id="@+id/btnEliminar"
                 android:layout_width="wrap_content"
+                android:backgroundTint="@color/mainBlue"
                 android:layout_height="wrap_content"
-                android:text="Eliminar"
+                android:text="@string/eliminar"
                 android:layout_marginStart="8dp" />
         </LinearLayout>
 
