Para master Sprint 3 Update dialog

--- a/app/src/main/res/layout/fragment_pick_meet_event_detail.xml
+++ b/app/src/main/res/layout/fragment_pick_meet_event_detail.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.calendar.PickMeetEventDetailFragment"
+    tools:context=".ui.calendar.pmedf.PickMeetEventDetailFragment"
     android:padding="16dp"
     android:background="@color/sec_blue"
     >
@@ -108,7 +108,7 @@
     </androidx.cardview.widget.CardView>
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/materialButton"
+        android:id="@+id/btnReservarCita"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -128,7 +128,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/materialButton">
+        app:layout_constraintTop_toBottomOf="@+id/btnReservarCita">
 
         <LinearLayout
             android:layout_width="match_parent"
