--- a/app/src/main/res/layout/item_meet.xml
+++ b/app/src/main/res/layout/item_meet.xml
@@ -8,19 +8,20 @@
     android:layout_marginHorizontal="4dp"
     android:elevation="2dp"
     android:padding="12dp"
-    android:backgroundTint="@color/white"
+    android:backgroundTint="@color/blank_background"
     app:cardCornerRadius="12dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="16dp">
 
         <TextView
             android:id="@+id/tvMeetDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Fecha"
+            android:text="@string/_12_may_2023_15_30"
             android:textStyle="bold"
             android:textColor="@color/mainBlue"
             android:textSize="16sp"/>
@@ -29,7 +30,7 @@
             android:id="@+id/tvMeetUser"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Usuario"
+            android:text="@string/reservado_por_name_user"
             android:textColor="@color/black"
             android:textSize="14sp"
             android:layout_marginTop="4dp"/>
