--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -12,7 +12,7 @@
         android:id="@+id/tituloPerfil"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Perfil"
+        android:text="@string/perfil"
         android:textSize="28sp"
         android:textStyle="bold"
         android:textColor="@color/mainBlue"
@@ -23,17 +23,13 @@
         app:layout_constraintEnd_toEndOf="parent"/>
 
     <!-- Imagen de perfil circular con sombra -->
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imagenPerfil"
         android:layout_width="140dp"
         android:layout_height="140dp"
         android:layout_marginTop="24dp"
         android:src="@drawable/imgperfil"
-        android:contentDescription="Foto de perfil"
-        android:scaleType="centerCrop"
-        android:clipToOutline="true"
-        android:outlineProvider="background"
-        android:elevation="8dp"
+        android:contentDescription="@string/foto_de_perfil"
         app:layout_constraintTop_toBottomOf="@id/tituloPerfil"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -43,7 +39,7 @@
         android:id="@+id/nombreUsuarioTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Nombre de Usuario"
+        android:text="@string/nombre_de_usuario"
         android:textSize="22sp"
         android:textColor="#222222"
         android:textStyle="bold"
@@ -59,7 +55,7 @@
         android:id="@+id/correoTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Correo: usuario@correo.com"
+        android:text="@string/correo_usuario_correo_com"
         android:textSize="16sp"
         android:textColor="#666666"
         android:layout_marginTop="20dp"
@@ -73,7 +69,7 @@
         android:id="@+id/descripcionTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Descripción: Información adicional sobre el usuario."
+        android:text="@string/descripci_n_informaci_n_adicional_sobre_el_usuario"
         android:textSize="16sp"
         android:textColor="#666666"
         android:layout_marginTop="16dp"
@@ -89,7 +85,7 @@
         android:layout_height="48dp"
         android:layout_marginTop="48dp"
         android:backgroundTint="@color/mainBlue"
-        android:text="Cerrar sesión"
+        android:text="@string/cerrar_sesi_n"
         android:textColor="#FFFFFF"
         android:textAllCaps="false"
         android:textSize="18sp"
