--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -3,5 +3,6 @@
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">192.168.1.52</domain>
         <domain includeSubdomains="true">192.168.1.148</domain>
+        <domain includeSubdomains="true">10.188.193.91</domain>
     </domain-config>
 </network-security-config>
