--- a/app/src/main/res/layout/fragment_date_item.xml
+++ b/app/src/main/res/layout/fragment_date_item.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".ui.eventmanager.DateItemFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".ui.eventmanager.DateItemFragment"
+    app:cardCornerRadius="15dp">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="10dp"
+        android:padding="5dp"
         >
 
         <TextView
