--- a/app/src/main/res/layout/fragment_create_event_detail.xml
+++ b/app/src/main/res/layout/fragment_create_event_detail.xml
@@ -9,20 +9,39 @@
     android:background="@color/sec_blue"
     >
 
+    <ImageButton
+        android:id="@+id/goBackCreate"
+        android:src="@drawable/icons8_cerrar_ventana_50"
+        android:layout_width="35dp"
+        android:backgroundTint="@color/sec_blue"
+        android:layout_height="35dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnCategoria"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/personal"
+        android:backgroundTint="#BABABA"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout1"
+        android:layout_marginTop="30dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/titulo_del_evento"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/goBackCreate">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etTitulo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
-            android:inputType="textEmailAddress"/>
+            android:inputType="textEmailAddress" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
@@ -143,11 +162,12 @@
 
 
     <androidx.cardview.widget.CardView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:id="@+id/cardView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
         android:backgroundTint="#5BFFFFFF"
-        app:cardCornerRadius="30dp"
-        app:layout_constraintBottom_toTopOf="@+id/lloptionsButtons"
+        app:cardCornerRadius="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnDescription">
@@ -164,25 +184,28 @@
                 android:layout_height="40dp"
                 android:layout_marginStart="20dp"
                 android:backgroundTint="@color/bar_colorTest2"
-                android:textColor="@color/white"
                 android:text="@string/nueva_cita"
+                android:textColor="@color/white"
                 android:textSize="11sp"
                 app:icon="@drawable/baseline_add_24"
                 app:iconGravity="textStart"
                 app:iconPadding="8dp" />
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rvDateEvent"
-                android:layout_gravity="center"
+            <com.google.android.flexbox.FlexboxLayout
+                android:id="@+id/flexboxChips"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_marginTop="25dp"
-                android:layout_weight="1" />
-
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                app:alignItems="flex_start"
+                app:flexWrap="wrap"
+                app:justifyContent="flex_start" />
 
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
+
+
+
 
     <LinearLayout
         android:id="@+id/lloptionsButtons"
