--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -23,6 +23,9 @@
         <action
             android:id="@+id/action_navigation_event_manager_to_createEventDetailFragment"
             app:destination="@id/createEventDetailFragment" />
+        <action
+            android:id="@+id/action_navigation_event_manager_to_eventoDetalleActivity"
+            app:destination="@id/eventoDetalleActivity" />
     </fragment>
 
 
@@ -41,6 +44,10 @@
         android:name="com.example.planpalmobile.ui.calendar.pmedf.PickMeetEventDetailFragment"
         android:label="fragment_pick_meet_event_detail"
         tools:layout="@layout/fragment_pick_meet_event_detail" />
+    <fragment
+        android:id="@+id/eventoDetalleActivity"
+        android:name="com.example.planpalmobile.ui.eventmanager.editevent.EventoDetalleActivity"
+        android:label="EventoDetalleActivity" />
 
 
 </navigation>
