--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -4,5 +4,6 @@
         <domain includeSubdomains="true">192.168.1.52</domain>
         <domain includeSubdomains="true">192.168.1.148</domain>
         <domain includeSubdomains="true">10.188.193.91</domain>
+        <domain includeSubdomains="true">192.168.1.150</domain>
     </domain-config>
 </network-security-config>
