updt: - margen horizontal entre los chips de las listas de CreateEventDetailFragment.java y EventoDetalleActivity.java

--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -4,4 +4,7 @@
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">50%</item>
     </style>
+    <style name="ChipMarginStyle">
+        <item name="android:layout_margin">8dp</item>
+    </style>
 </resources>
