--- a/app/src/main/res/layout/fragment_pick_meet_event_detail.xml
+++ b/app/src/main/res/layout/fragment_pick_meet_event_detail.xml
@@ -159,8 +159,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_marginTop="25dp"
-                android:layout_weight="1"
-                />
+                android:layout_weight="1" />
 
             <ViewStub
                 android:id="@+id/viewStubEmpty"
