--- a/app/src/main/res/layout/item_evento.xml
+++ b/app/src/main/res/layout/item_evento.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_margin="8dp"
+    android:layout_margin="17dp"
+    android:padding="5dp"
     android:layout_height="wrap_content"
     android:elevation="4dp">
 
@@ -9,21 +10,22 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="12dp">
+        android:padding="6dp"
+        >
 
         <TextView
             android:id="@+id/tvTituloEvento"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Título del Evento"
+            android:text="@string/t_tulo_del_evento"
             android:textStyle="bold"
-            android:textSize="18sp" />
+            android:textSize="15sp" />
 
         <TextView
             android:id="@+id/tvFechasEvento"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Inicio "
+            android:text="@string/inicio"
             android:textSize="14sp" />
 
         <LinearLayout
@@ -35,15 +37,18 @@
 
             <Button
                 android:id="@+id/btnVerDetalles"
+                android:textSize="11sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Ver detalles"
+                android:text="@string/ver_detalles"
                 android:backgroundTint="@color/mainBlue"
+                android:layout_marginEnd="15dp"
                 />
 
             <Button
                 android:id="@+id/btnEliminar"
                 android:layout_width="wrap_content"
+                android:textSize="11sp"
                 android:backgroundTint="@color/mainBlue"
                 android:layout_height="wrap_content"
                 android:text="@string/eliminar"
