update: arreglo del clipToPadding en rv CalendarFragment

--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -34,13 +34,14 @@
         <com.google.android.material.button.MaterialButton
             android:id="@+id/ibtnActualDay"
             android:layout_width="50dp"
-            android:layout_height="45dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="11dp"
             android:background="@color/white"
             android:backgroundTint="@color/mainBlue"
             android:contentDescription="@string/calendar_icon"
             android:padding="8dp"
             android:text="@string/hoy"
+            android:textSize="13sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -104,10 +105,11 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvListEventItems"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_marginTop="25dp"
-                android:layout_weight="1"
-                />
+                android:layout_height="match_parent"
+                android:paddingBottom="80dp"
+                android:clipToPadding="false"
+            />
+
 
             <ViewStub
                 android:id="@+id/viewStubEmpty"
